# chief-cooking

./: .dockerignore  .gitignore  README.md  build_demo.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  bing_sample.html  bing_web.py  ddg_search.py  debug_bing.py  debug_links.py  debug_murl.py  debug_pages.py  find_images.py  generate_images.py  pyproject.toml  regenerate_failed.py  requirements.txt  scan_domains.py  test_recommend.py  unsplash_html.py  unsplash_napi.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: auth.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: favorite.py  ingredient.py  recipe.py  user.py
backend/app/schemas/: ingredient.py  recipe.py  user.py
backend/app/services/: ai.py  favorite.py  image.py  ingredient.py  recipe.py  user.py  wechat.py
backend/app/utils/: __init__.py  sensitive_words.py  token_usage.py
backend/static/: demo.html  index.html
backend/static/assets/: index-B-_wMQ5w.css  index-BfbFePw2.css  index-BimEl2IS.css  index-C2cSauo_.css  index-C6bgsZFe.css  index-CHd995iI.css  index-CMONCAH7.css  index-CYHq8fHQ.js  index-Cp3rBzUN.css  index-FE1JdOwj.css  index-otVX-z77.css  index-sdDnmiLH.css  index-uywBwgS5.css  pages-agreement-index.BEbDT53A.js  pages-confirm-index.C-vBKAIa.js  pages-detail-index.DR8zO2Uc.js  pages-favorites-index.CCCHohQY.js  pages-history-index.wE7fUTJm.js  pages-index-index.46gW0cNY.js  (+10 more)
(+36 files in other folders)
